
2009/03/17
	* Rev. 13592 Removed garbage # from the medal of honor names. [L0ne_W0lf]
2009/03/16
	* Rev. 13591 Merged a good deal of changes from trunk's DB folder. [L0ne_W0lf]
2008/09/21
	* Rev.13223 Merged item_db and item_trade from trunk. [L0ne_W0lf]
	- Mercenary items not merged fully, or teleport scrolls.
2008/07/25
	* Updated: massive item_db update from Trunk [akrus]
	- Added: 2765-2771,14500
	- Added (commented out): 5363-5365,5367,5401-5405,5408-5416
	- Modified: 1365,1535,1730-1734,2000,2537,2542,2621-2626,2729,2741,4044,4088,4103,5204,5273-5276,5283,5286,5305,5310,5326,5372,5382-5385,5391,5399,12192,12194-12198,12200,12220,12266-12268,12299,12966-12967,12969-12970,13007-13008,13154-13156,13158-13159,13167-13169,13172-1317314534-14538,14546-14550
2008/06/23
	* Updated: map cache and monsters database [akrus]
2008/06/19
	* Merged: SVN Revision 12840 from Trunk [akrus]
	- Fixed: item id 1425 (Assaulter's_Spear) using BaseClass instead of BaseJob
	- Fixed: missing capital M on item id 5261 (Silver_Tiara_) script.
2008/06/08
	* Update on /db folder from trunk, up to revision 12794. Mainly item_db changes (except SC_ changes).
		packet_db, job_db1 and size_fix changes left out due to source file update requeriment. [Brainstorm]
2008/05/24
	* Rev. 12721 Merged several updates from various trunk databases. [L0ne_w0lf]
	- item_avail, item_db, item_trade, mob_db, mob_db2, mob_skill_db, pet_db, skill_db, and the skill_unit_db.
2008/04/23
	* Rev. 12642 Merged mob_db.txt and mob_skill_db.txt from trunk. [L0ne_W0lf]
2008/04/03
	* Rev. 12467 Merged mob_db.txt from trunk. [L0ne_W0lf]
2008/03/21
	* Updated the land skill flags in skill_unit_db.txt
2008/03/11
	* Updated firepillar so it cannot be placed on top of others
	* Added Firepillar's 'target cannot move for 0.2 sec x hit' property
	* Added barehanded weapons to Full Adrenaline Rush's list [ultramage]
2008/03/09
	* Rev. 12334 Disabled Snap in Turbo track. (Seems obvious, no?) [L0ne_W0lf]
2008/03/05