@@ -101,7 +101,7 @@
 1095,ANDRE,Andre,Andre,17,688,0,109,71,1,60,71,10,0,1,17,24,20,26,20,10,12,0,4,22,0x118B,300,1288,288,384,0,0,0,0,0,0,0,0,955,9000,910,1000,938,500,993,50,1001,4,1002,350,757,28,0,0,0,0,4043,1
 1096,ANGELING,Angeling,Angeling,20,55000,0,163,144,1,120,195,0,70,1,50,20,75,68,200,10,12,1,8,86,0x37B5,200,1072,672,672,0,0,0,0,0,0,0,0,2254,100,2324,60,610,500,2282,1,509,2000,512,28,714,40,0,0,0,0,4054,1
 1097,ANT_EGG,Ant Egg,Ant Egg,4,420,0,5,4,0,1,2,20,20,1,1,1,0,1,20,10,12,0,0,60,0x0,1000,1001,1,1,0,0,0,0,0,0,0,0,1010,320,935,2000,909,2000,938,650,713,2000,1002,200,0,0,0,0,0,0,4013,1
-1098,ANUBIS,Anubis,Anubis,75,38000,0,28000,22000,1,530,1167,35,31,5,65,10,82,77,33,10,12,2,7,49,0x3695,150,1250,720,576,0,0,0,0,0,0,0,0,2602,5,1625,10,2601,5,1007,15,0,0,0,0,0,0,0,0,0,0,4138,1
+1098,ANUBIS,Anubis,Anubis,75,38000,0,28000,22000,1,530,1697,35,31,5,65,10,82,77,33,10,12,2,7,49,0x3695,150,1250,720,576,0,0,0,0,0,0,0,0,930,3000,1625,10,934,550,984,105,1045,4365,2617,1,1614,3,0,0,0,0,4138,1
 1099,ARGIOPE,Argiope,Argiope,41,4382,0,1797,849,1,395,480,30,0,1,41,31,10,56,30,10,12,2,4,25,0x3795,300,1792,792,336,0,0,0,0,0,0,0,0,1042,5335,912,1200,757,175,2406,5,511,1500,719,10,0,0,0,0,0,0,4114,1
 1100,ARGOS,Argos,Argos,25,1117,0,388,188,1,158,191,15,0,1,25,25,5,32,15,10,12,2,4,25,0x3195,300,1468,468,768,0,0,0,0,0,0,0,0,1025,9000,911,1200,1042,500,757,61,511,670,508,250,10017,15,0,0,0,0,4075,1
 1101,BAPHOMET_,Baphomet Jr.,Baphomet Jr.,50,8578,0,2706,1480,1,487,590,15,25,1,75,55,1,93,45,10,12,0,6,27,0x3795,100,868,480,120,0,0,0,0,0,0,0,0,923,500,984,63,1464,2,607,50,610,100,508,1300,2405,50,0,0,0,0,4129,1
